# sensevoice-multimodal-emotion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  emotion_analyzer.py  pyproject.toml  requirements.txt  sensevoice_analyze.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: frustrated_tone.json  probing_tone.json  satisfied_tone.json
sensevoice_emotion/: __init__.py  __main__.py  speaker_baseline.py
tests/: test_emotion.py
