[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sensevoice-multimodal-emotion"
version = "3.0.1"
description = "Multimodal emotion fusion analysis using Whisper + SenseVoice"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "yyr88110"}
]
keywords = ["emotion", "speech", "nlp", "sensevoice", "whisper", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "funasr>=1.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "openai-whisper>=20231117",
]

[project.urls]
Homepage = "https://github.com/yyr88110/sensevoice-multimodal-emotion"
Repository = "https://github.com/yyr88110/sensevoice-multimodal-emotion"
Issues = "https://github.com/yyr88110/sensevoice-multimodal-emotion/issues"

[project.scripts]
sensevoice-emotion = "sensevoice_emotion.sensevoice_emotion:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sensevoice_emotion*"]
